--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abaui / Test</title>
+    <title>Abaui / Beta</title>
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&f[]=general-sans@500,600,700&f[]=clash-display@600,500&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -710,7 +710,7 @@
     <section class="scripts-grid">
         <div class="script-card">
             <div class="script-image-container">
-                <img src="https://tr.rbxcdn.com/180DAY-188a97a524487218f6107d5259c8d25e/768/432/Image/Webp/noFilter" alt="Script Preview" class="script-image" data-images='[
+                <img src="https://tr.rbxcdn.com/180DAY-188a97a524487218f6107d5259c8d25e/768/432/Image/Webp/noFilter" alt="Script Image" class="script-image" data-images='[
                     "https://tr.rbxcdn.com/180DAY-188a97a524487218f6107d5259c8d25e/768/432/Image/Webp/noFilter",
                     "https://tr.rbxcdn.com/180DAY-ffe378bbeeb1ab272768c8eb80f7518f/768/432/Image/Webp/noFilter",
                     "https://tr.rbxcdn.com/180DAY-8a6098d4b38604fe6079725021ba8a51/768/432/Image/Webp/noFilter",
@@ -746,7 +746,44 @@
             </div>
         </div>
         <div class="script-card">
-            <img src="https://scriptblox.com/images/script/1863506-1724701791775.png" alt="Universal Script" class="script-image">
+            <div class="script-image-container">
+                <img src="https://tr.rbxcdn.com/180DAY-188a97a524487218f6107d5259c8d25e/768/432/Image/Webp/noFilter" alt="Script Image" class="script-image" data-images='[
+                    "https://tr.rbxcdn.com/180DAY-188a97a524487218f6107d5259c8d25e/768/432/Image/Webp/noFilter",
+                    "https://tr.rbxcdn.com/180DAY-ffe378bbeeb1ab272768c8eb80f7518f/768/432/Image/Webp/noFilter",
+                    "https://tr.rbxcdn.com/180DAY-8a6098d4b38604fe6079725021ba8a51/768/432/Image/Webp/noFilter",
+                    "https://tr.rbxcdn.com/180DAY-92c4178c95e7da6d8d6daa142dda28fa/768/432/Image/Webp/noFilter",
+                    "https://tr.rbxcdn.com/180DAY-5ae3ebde4e92caf5acde869ae0cef567/768/432/Image/Webp/noFilter"
+                ]'>
+                <button class="image-nav prev" aria-label="Previous image">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="15 18 9 12 15 6"></polyline>
+                    </svg>
+                </button>
+                <button class="image-nav next" aria-label="Next image">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="9 18 15 12 9 6"></polyline>
+                    </svg>
+                </button>
+            </div>
+            <div class="script-content">
+                <div class="script-header">
+                    <h3 class="script-title">FPEScript V1</h3>
+                </div>
+                <p class="script-type">Legacy FPE:S</p>
+                <p class="script-author">Made By aabbaaii13/14</p>
+                <div class="script-code">
+                    loadstring(game:HttpGet("https://rawscripts.net/raw/Legacy-FPE:S-FPEScript-V1-36266"))()
+                    <button class="copy-button" aria-label="Copy script">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                            <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="script-card">
+            <img src="https://scriptblox.com/images/script/1863506-1724701791775.png" alt="Script Image" class="script-image">
             <div class="script-content">
                 <div class="script-header">
                     <h3 class="script-title">Invite Friend GUI</h3>
