--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abaui / Roblox Exploiting Community</title>
+    <title>Abaui / Roblox Exploit Community</title>
+    <meta property="og:title" content="Abaui">
+    <meta property="og:description" content="Roblox Exploiting Community Website">
+    <meta property="og:image" content="https://abaui-community.vercel.app/abaui.png">
+    <meta property="og:url" content="https://abaui-community.vercel.app">
+    <meta property="og:type" content="website">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&f[]=general-sans@500,600,700&f[]=clash-display@600,500&display=swap" rel="stylesheet">
     <style>
         :root {
