--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="https://abaui-community.vercel.app/abaui.png">
     <meta property="og:url" content="https://abaui-community.vercel.app">
     <meta property="og:type" content="website">
+    <link rel="icon" href="abaui.png" type="image/png">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&f[]=general-sans@500,600,700&f[]=clash-display@600,500&display=swap" rel="stylesheet">
     <style>
         :root {
