--- a/executors.html
+++ b/executors.html
@@ -453,7 +453,7 @@
                 <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord</span></a></li>
                 <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
-                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Scripts</span></a></li>
+                <li><a href="https://abaui.vercel.app/scripts.html" target="_blank"><span>Scripts</span></a></li>
                 <li><a href="https://abaui.vercel.app" target="_blank"><span>Home</span></a></li>
             </ul>
         </div>
