--- a/scripts.html
+++ b/scripts.html
@@ -586,7 +586,7 @@
                 <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
                 <li><a href="https://abaui.vercel.app" target="_blank"><span>Home</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors</span></a></li>
+                <li><a href="https://abaui.vercel.app/executors.html" target="_blank"><span>Executors</span></a></li>
             </ul>
         </div>
     </nav>
