--- a/executors.html
+++ b/executors.html
@@ -328,6 +328,477 @@
             padding: 2rem 7%;
             margin-top: 2rem;
         }
+        .executor-card {
+            background: var(--surface);
+            border-radius: 20px;
+            padding: 2rem;
+            border: 1px solid var(--border-color);
+            transition: all 0.5s var(--transition);
+            backdrop-filter: blur(10px);
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            overflow: hidden;
+        }
+        .executor-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: var(--gradient);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.5s var(--transition);
+        }
+        .executor-card:hover::before {
+            transform: scaleX(1);
+        }
+        .executor-card:hover {
+            transform: translateY(-8px);
+            box-shadow: var(--shadow-lg);
+            border-color: transparent;
+        }
+        .executor-name {
+            font-family: 'Clash Display', sans-serif;
+            font-size: 1.75rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+            background: var(--gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            letter-spacing: -0.02em;
+        }
+        .executor-description {
+            color: var(--text);
+            opacity: 0.9;
+            margin-bottom: 1.5rem;
+            font-size: 1.05rem;
+            line-height: 1.6;
+        }
+        .executor-support {
+            font-size: 0.95rem;
+            color: var(--accent);
+            margin-bottom: 1.5rem;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+        .executor-support::before {
+            content: '•';
+            color: var(--accent);
+            font-size: 1.2rem;
+        }
+        .executor-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.9rem 1.75rem;
+            background: var(--gradient);
+            color: white;
+            text-decoration: none;
+            border-radius: 12px;
+            font-weight: 600;
+            font-size: 1rem;
+            transition: all 0.4s var(--transition);
+            margin-top: auto;
+            width: fit-content;
+        }
+        .executor-button:hover {
+            background: var(--hover-gradient);
+            transform: translateY(-2px);
+            box-shadow: var(--glow);
+        }
+        .executor-button::after {
+            content: '→';
+            transition: transform 0.3s var(--transition);
+        }
+        .executor-button:hover::after {
+            transform: translateX(4px);
+        }
+    </style>
+</head>
+<body>
+    <nav class="nav">
+        <div class="logo">Abaui</div>
+        <div class="nav-controls">
+            <button class="theme-toggle">
+                <svg class="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+                </svg>
+                <svg class="moon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+                </svg>
+            </button>
+            <button class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-links">
+                <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord</span></a></li>
+                <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github</span></a></li>
+                <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
+                <li><a href="https://abaui.vercel.app/scripts.html" target="_blank"><span>Scripts</span></a></li>
+                <li><a href="https://abaui.vercel.app" target="_blank"><span>Home</span></a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="search-container">
+        <input type="text" id="executor-search" placeholder="Search Executors...">
+        <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="11" cy="11" r="8"></circle>
+            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+    </div>
+    <div class="executors-grid">
+        <div class="executor-card">
+            <h3 class="executor-name">Delta X</h3>
+            <p class="executor-description">A premium experience embedded with the latest technologies to enhance your scripting experience to the next level.</p>
+            <p class="executor-support">Supports Android, IOS</p>
+            <a href="https://deltaexploits.gg" class="executor-button" target="_blank">Download</a>
+        </div>
+
+        <div class="executor-card">
+            <h3 class="executor-name">Krnl</h3>
+            <p class="executor-description">A powerful multi-platform Luau scripting engine, completewith a text editor and built-in script database.</p>
+            <p class="executor-support">Supports Android And VNG, IOS</p>
+            <a href="https://krnl.cat/downloads" class="executor-button" target="_blank">Download</a>
+        </div>
+
+        <div class="executor-card">
+            <h3 class="executor-name">Arceus X Neo</h3>
+            <p class="executor-description">Lightweight, secure, and completely free.</p>
+            <p class="executor-support">Supports Android And VNG, IOS</p>
+            <a href="https://spdmteam.com/neo" class="executor-button" target="_blank">Download</a>
+            <span style="
+                position: absolute;
+                bottom: 10px;
+                right: 10px;
+                font-size: 0.5rem;
+                opacity: 0.25;
+                color: var(--text);
+            ">fraud devs</span>
+        </div>
+
+        <div class="executor-card">
+            <h3 class="executor-name">Swift</h3>
+            <p class="executor-description">The one to change it all, the ultimate free scripting utilitly.</p>
+            <p class="executor-support">Supports Windows</p>
+            <a href="https://getswift.vip" class="executor-button" target="_blank">Download</a>
+        </div>
+    </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const theme = document.querySelector('.theme-toggle');
+            theme?.addEventListener('click', () => {
+                document.documentElement.setAttribute('data-theme', 
+                    document.documentElement.getAttribute('data-theme') === 'dark' ? 'light' : 'dark'
+                );
+            });
+            const input = document.getElementById('executor-search');
+            const cards = document.querySelectorAll('.executor-card');
+            input?.addEventListener('input', () => {
+                const term = input.value.toLowerCase();
+                cards.forEach(card => {
+                    const name = card.querySelector('.executor-name')?.textContent.toLowerCase();
+                    const support = card.querySelector('.executor-support')?.textContent.toLowerCase();
+                    
+                    const visible = title?.includes(term) || 
+                                    support?.includes(term) || 
+                                    author?.includes(term);
+                    
+                    card.style.display = visible ? 'block' : 'none';
+                });
+            });
+            const menu = document.querySelector('.menu-toggle');
+            const nav = document.querySelector('.nav-links');
+
+            menu?.addEventListener('click', () => {
+                nav?.classList.toggle('active');
+                menu.classList.toggle('active');
+            });
+            document.addEventListener('click', (e) => {
+                if (nav?.classList.contains('active') && 
+                    !e.target.closest('.nav-links') && 
+                    !e.target.closest('.menu-toggle')) {
+                    nav.classList.remove('active');
+                    menu?.classList.remove('active');
+                }
+            });
+        });
+    </script>
+</body>
+</html>            overflow-x: hidden;
+            min-height: 100vh;
+        }
+        .nav {
+            position: fixed;
+            width: 100%;
+            padding: 1.25rem 7%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: var(--nav-bg);
+            backdrop-filter: blur(10px) saturate(180%);
+            -webkit-backdrop-filter: blur(10px) saturate(180%);
+            z-index: 1000;
+            border-bottom: 1px solid var(--border-color);
+            top: 0;
+            left: 0;
+        }
+        .logo {
+            font-family: 'Clash Display', sans-serif;
+            font-size: 1.5rem;
+            font-weight: 600;
+            background: var(--gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            position: relative;
+            letter-spacing: -0.02em;
+            transition: all 1s ease;
+        }
+        .logo:hover {
+            background: var(--hover-gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            text-shadow: var(--text-shadow);
+            transform: translateY(-1px);
+        }
+        .nav-controls {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+        .nav-links {
+            display: flex;
+            gap: 1.25em;
+            list-style: none;
+        }
+        .nav-links a {
+            color: var(--text);
+            text-decoration: none;
+            font-size: 0.95rem;
+            font-weight: 500;
+            opacity: 0.8;
+            transition: all 1s var(--transition);
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            position: relative;
+            overflow: hidden;
+        }
+        .nav-links a:hover {
+            opacity: 1;
+            background: var(--hover-bg);
+            color: var(--accent);
+            transform: translateY(-2px);
+            box-shadow: var(--glow);
+            transition: all 1s var(--transition);
+            border-radius: 5px;
+        }
+        .nav-links a::after {
+            border-radius: 15px;
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: var(--gradient);
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 1s var(--transition);
+        }
+        .nav-links a:hover::after {
+            transform: scaleX(1);
+            transform-origin: left;
+        }
+        .theme-toggle {
+            background: none;
+            border: none;
+            padding: 0.5rem;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 35px;
+            height: 35px;
+            border-radius: 9px;
+            color: var(--text);
+            transition: all 1s var(--transition);
+            position: relative;
+        }
+        .theme-toggle:hover {
+            background: var(--secondary);
+            transform: scale(1.2);
+        }
+        .theme-toggle:active {
+            transform: scale(1);
+        }
+        .theme-toggle svg {
+            width: 18px;
+            height: 18px;
+            transition: all 1s var(--transition);
+        }
+        .theme-toggle .moon {
+            display: none;
+        }
+        [data-theme="dark"] .theme-toggle .sun {
+            display: none;
+        }
+        [data-theme="dark"] .theme-toggle .moon {
+            display: block;
+        }
+        @keyframes slideDown {
+            from { transform: translateY(-100%); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+        @media (max-width: 768px) {
+            .nav {
+                padding: 1.25rem 5%;
+            }
+            .nav-links {
+                display: flex;
+                position: fixed;
+                top: 0;
+                right: 0;
+                height: 100vh;
+                background: var(--surface);
+                backdrop-filter: blur(10px);
+                padding: 5rem 2rem;
+                min-width: 250px;
+                flex-direction: column;
+                gap: 1rem;
+                transform: translateX(100%);
+                transition: transform 0.3s ease;
+            }
+            .nav-links.active {
+                transform: translateX(0);
+            }
+            .menu-toggle {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                background: none;
+                border: none;
+                padding: 0;
+                margin-left: 0.5rem;
+                width: 40px;
+                height: 40px;
+                cursor: pointer;
+                position: relative;
+                z-index: 2050;
+                transition: background 0.5s;
+                transition: transform 0.5s;
+            }
+            .menu-toggle:hover {
+                transform: scale(0.9);
+            }
+            .menu-toggle span {
+                display: block;
+                width: 30px;
+                height: 2px;
+                background: var(--text);
+                border-radius: 10px;
+                margin: 4px 0;
+                transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+                position: relative;
+            }
+            .menu-toggle.active span:nth-child(1) {
+                transform: translateY(9.5px) rotate(45deg);
+            }
+            .menu-toggle.active span:nth-child(2) {
+                opacity: 0;
+            }
+            .menu-toggle.active span:nth-child(3) {
+                transform: translateY(-9.5px) rotate(-45deg);
+            }
+        }
+        @media (max-width: 480px) {
+            .nav {
+                padding: 1rem 4%;
+            }
+            .logo {
+                font-size: 1.25rem;
+            }
+            .nav-links {
+                min-width: 200px;
+                padding: 4rem 1.5rem;
+            }
+            .theme-toggle, .menu-toggle {
+                width: 30px;
+                height: 30px;
+            }
+            .theme-toggle svg, .menu-toggle svg {
+                width: 16px;
+                height: 16px;
+            }
+        }
+        @media (max-width: 360px) {
+            .nav-links {
+                min-width: 180px;
+            }
+        }
+        @media (min-width: 1440px) {
+            .nav {
+                padding: 1.5rem 10%;
+            }
+            .logo {
+                font-size: 1.75rem;
+            }
+        }
+        @media (min-width: 1920px) {
+            .nav {
+                padding: 1.75rem 12%;
+            }
+        }
+        @media (min-width: 2000px) {
+            html {
+                font-size: 20px;
+            }
+        }
+        .search-container {
+            position: relative;
+            width: 90%;
+            max-width: 1000px;
+            margin: 6rem auto 3rem;
+        }
+        #executor-search {
+            width: 100%;
+            padding: 1rem 1.5rem;
+            padding-right: 3rem;
+            border: 1px solid var(--border-color);
+            border-radius: 12px;
+            background: var(--surface);
+            color: var(--text);
+            font-family: 'General Sans', sans-serif;
+            font-size: 1rem;
+            transition: all 0.3s var(--transition);
+        }
+        #executor-search:focus {
+            outline: none;
+            border-color: var(--accent);
+            box-shadow: var(--glow);
+        }
+        .search-icon {
+            position: absolute;
+            right: 2.5rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: var(--text);
+            opacity: 0.5;
+        }
+        .executors-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 2.5rem;
+            padding: 2rem 7%;
+            margin-top: 2rem;
+        }
 
         .executor-card {
             background: var(--surface);
