--- a/index.html
+++ b/index.html
@@ -506,6 +506,16 @@
                 font-size: 2rem;
             }
         }
+        .version-text {
+            position: absolute;
+            top: 32.5%;
+            right: 100%;
+            font-size: 0.6rem;
+            opacity: 0.5;
+            color: var(--text);
+            pointer-events: none;
+            font-family: 'General Sans', sans-serif;
+        }
     </style>
 </head>
 <body>
@@ -517,6 +527,7 @@
         <div class="logo">Abaui</div>
         <div class="nav-controls">
             <button class="theme-toggle">
+                <span class="version-text">V1.2.1</span>
                 <svg class="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
                 </svg>
@@ -570,7 +581,7 @@
                     menu?.classList.remove('active');
                 }
             });
-            function updateText() {
+            function update() {
                 const textElement = document.getElementById('responsive-text');
                 if (window.innerWidth > 768) {
                     textElement.textContent = "Looking For Options? It's On Above!";
@@ -578,8 +589,8 @@
                     textElement.textContent = "Click ☰ To See Options...";
                 }
             }
-            updateText();
-            window.addEventListener('resize', updateText);
+            update();
+            window.addEventListener('resize', update);
         });
     </script>
 </body>
