--- a/scripts.html
+++ b/scripts.html
@@ -620,7 +620,7 @@
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://rawscripts.net/raw/Universal-Script-Abaui-Hub-20004"))()
+                    loadstring(game:HttpGet("https://abaui.vecrel.app/raw/abauihub.lua"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -629,6 +629,38 @@
                     </button>
                     <button class="raw-button" aria-label="Raw Script" 
                         onclick="window.open('https://abaui.vercel.app/raw/abauihub.lua', '_blank')"
+                        data-scriptname="raw/asab">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                            <polyline points="14 2 14 8 20 8"/>
+                            <line x1="16" y1="13" x2="8" y2="13"/>
+                            <line x1="16" y1="17" x2="8" y2="17"/>
+                            <polyline points="10 9 9 9 8 9"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="script-card" data-name="Wild Hub" data-game="Universal">
+            <div class="script-image-container">
+                <img src="https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/wildhubb.png" alt="Script Image" class="script-image">
+            </div>
+            <div class="script-content">
+                <div class="script-header">
+                    <h3 class="script-title">Wild Hub</h3>
+                </div>
+                <p class="script-type">Universal Script</p>
+                <p class="script-author">Made By Wild Wide (realsmexywide)</p>
+                <div class="script-code">
+                    loadstring(game:HttpGet("https://abaui.vecrel.app/raw/wildhub.lua"))()
+                    <button class="copy-button" aria-label="Copy script">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                            <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                        </svg>
+                    </button>
+                    <button class="raw-button" aria-label="Raw Script" 
+                        onclick="window.open('https://abaui.vercel.app/raw/wildhub.lua', '_blank')"
                         data-scriptname="raw/asab">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
@@ -652,7 +684,7 @@
                     <p class="script-type">Steal a Brainrot</p>
                     <p class="script-author">Made By aabbaaii13/14</p>
                     <div class="script-code">
-                        loadstring(game:HttpGet("https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/SAB.lua"))()
+                        loadstring(game:HttpGet("https://abaui.vercel.app/raw/asab.lua"))()
                         <button class="copy-button" aria-label="Copy Script">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -694,7 +726,7 @@
                     <p class="script-type">Legacy FPE:S</p>
                     <p class="script-author">Made By aabbaaii13/14</p>
                     <div class="script-code">
-                        loadstring(game:HttpGet("https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/fpe.lua"))()
+                        loadstring(game:HttpGet("https://abaui.vercel.app/raw/fpescript.lua"))()
                         <button class="copy-button" aria-label="Copy Script">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -727,7 +759,7 @@
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://rawscripts.net/raw/Universal-Script-Abaui-Searcher-V1-26326"))()
+                    loadstring(game:HttpGet("https://abaui.vercel.app/raw)abauisearcher.lua"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -759,7 +791,7 @@
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://rawscripts.net/raw/Universal-Script-Fps-Counter-Beta-21767"))()
+                    loadstring(game:HttpGet("https://abaui.vercel.app/raw/fpscounter.lua"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -791,7 +823,7 @@
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://rawscripts.net/raw/Universal-Script-FE-VFLY-AND-FLY-GUI-21056"))()
+                    loadstring(game:HttpGet("https://abaui.vercel.app/raw/fevflyandflygui.lua"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
