Update version number in home.html
Updated the version from 1.2.1 to 1.3.0 in the theme toggle button.

--- a/home.html
+++ b/home.html
@@ -527,7 +527,7 @@
         <div class="logo">Abaui</div>
         <div class="nav-controls">
             <button class="theme-toggle">
-                <span class="version-text">V1.2.1</span>
+                <span class="version-text">V1.3.0</span>
                 <svg class="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
                 </svg>
@@ -542,10 +542,10 @@
             </button>
             <ul class="nav-links">
                 <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord</span></a></li>
-                <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github</span></a></li>
+                <li><a href="https://github.com/aabbaaii13" target="_blank"><span>Github</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
-                <li><a href="https://abaui.vercel.app/scripts.html" target="_blank"><span>Scripts</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors.html" target="_blank"><span>Executors</span></a></li>
+                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Scripts</span></a></li>
+                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors</span></a></li>
             </ul>
         </div>
     </nav>
@@ -595,3 +595,4 @@
     </script>
 </body>
 </html>
+
