--- a/executors.html
+++ b/executors.html
@@ -6,10 +6,10 @@
     <title>Abaui - Executors</title>
     <meta property="og:title" content="Abaui - Executors">
     <meta property="og:description" content="New Roblox Website For Exploiters. We Have a Our Scripts, (Not Ours) Executors, Community Scripts And Maybe More.">
-    <meta property="og:image" content="https://abaui.vercel.app/abaui.png">
+    <meta property="og:image" content="https://abaui.vercel.app/icons/abaui.png">
     <meta property="og:url" content="https://abaui-community.vercel.app">
     <meta property="og:type" content="website">
-    <link rel="icon" href="abaui.png" type="image/png">
+    <link rel="icon" href="icons/abaui.png" type="image/png">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&f[]=general-sans@500,600,700&f[]=clash-display@600,500&display=swap" rel="stylesheet">
     <style>
         :root {
