--- a/scripts.html
+++ b/scripts.html
@@ -32,11 +32,11 @@
                 <span></span>
             </button>
             <ul class="nav-links">
-                <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord</span></a></li>
-                <li><a href="https://github.com/aabbaaii13" target="_blank"><span>Github</span></a></li>
-                <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
-                <li><a href="https://abaui.vercel.app" target="_blank"><span>Home</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors</span></a></li>
+                <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord Server</span></a></li>
+                <li><a href="https://github.com/aabbaaii13" target="_blank"><span>GitHub Account</span></a></li>
+                <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube Channel</span></a></li>
+                <li><a href="https://abaui.vercel.app/" target="_blank"><span>Home Page</span></a></li>
+                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors </span></a></li>
             </ul>
         </div>
     </nav>
