--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <span></span>
             </button>
             <ul class="nav-links">
-                <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord</span></a></li>
-                <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github</span></a></li>
-                <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
-                <li><a href="https://abaui.vercel.app/scripts.html" target="_blank"><span>Scripts</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors.html" target="_blank"><span>Executors</span></a></li>
+                <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord Server</span></a></li>
+                <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github Account</span></a></li>
+                <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube Channel</span></a></li>
+                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Scripts</span></a></li>
+                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors</span></a></li>
             </ul>
         </div>
     </nav>
@@ -86,3 +86,4 @@
     </script>
 </body>
 </html>
+
