--- a/scripts.html
+++ b/scripts.html
@@ -36,7 +36,7 @@
                 <li><a href="https://github.com/aabbaaii13" target="_blank"><span>GitHub Account</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube Channel</span></a></li>
                 <li><a href="https://abaui.vercel.app/" target="_blank"><span>Home Page</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors </span></a></li>
+                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors Page</span></a></li>
             </ul>
         </div>
     </nav>
