--- a/executors.html
+++ b/executors.html
@@ -35,7 +35,7 @@
                 <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord Server</span></a></li>
                 <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>GitHub Account</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube Channel</span></a></li>
-                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Scripts</span></a></li>
+                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Our Scripts</span></a></li>
                 <li><a href="https://abaui.vercel.app/" target="_blank"><span>Home Page</span></a></li>
             </ul>
         </div>
