--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord Server</span></a></li>
                 <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github Account</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube Channel</span></a></li>
-                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Scripts</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors</span></a></li>
+                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Our Scripts</span></a></li>
+                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors Page</span></a></li>
             </ul>
         </div>
     </nav>
@@ -86,4 +86,5 @@
     </script>
 </body>
 </html>
+
 
