--- a/soon.html
+++ b/soon.html
@@ -103,7 +103,7 @@
     <p>The Website Is Currently Undergoing Update.<br>Please Come Back Later.</p>
     <div class="hero-buttons">
         <a href="https://discord.gg/hnq9AGVMwq" class="btn">Join Discord</a>
-        <a href="https://github.com/CaseohCASEOH" class="btn">View GitHub</a>
+        <a href="https://github.com/aabbaaii13" class="btn">View GitHub</a>
     </div>
     <div class="header-buttons">
         <button class="theme-toggle" aria-label="Toggle Theme">
@@ -130,3 +130,4 @@
     </script>
 </body>
 </html>
+
