Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
             <ul class="nav-links">
                 <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord Server</span></a></li>
-                <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github Account</span></a></li>
+                <li><a href="https://github.com/aabbaaii13" target="_blank"><span>Github Account</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube Channel</span></a></li>
                 <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Our Scripts</span></a></li>
                 <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors Page</span></a></li>
@@ -86,5 +86,6 @@
     </script>
 </body>
 </html>
+
 
 
