--- a/scripts.html
+++ b/scripts.html
@@ -144,6 +144,38 @@
                 </div>
             </div>
         </div>
+        <div class="script-card" data-name="PLSA" data-game="Prison Life">
+            <div class="script-image-container">
+                <img src="https://tr.rbxcdn.com/180DAY-7e4ac70bc3496ea7e4d039f3cd60b6a4/768/432/Image/Webp/noFilter" alt="Script Image" class="script-image">
+            </div>
+                <div class="script-content">
+                    <div class="script-header">
+                        <h3 class="script-title">PLSA</h3>
+                    </div>
+                    <p class="script-type">Prison Life</p>
+                    <p class="script-author">Made By aabbaaii13/14</p>
+                    <div class="script-code">
+                        loadstring(game:HttpGet("https://abaui.vercel.app/raw/plsa"))()
+                        <button class="copy-button" aria-label="Copy Script">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                            </svg>
+                        <button class="raw-button" aria-label="Raw Script" 
+                            onclick="window.open('https://abaui.vercel.app/raw/plsa', '_blank')"
+                            data-scriptname="raw/plsa">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                                <polyline points="14 2 14 8 20 8"/>
+                                <line x1="16" y1="13" x2="8" y2="13"/>
+                                <line x1="16" y1="17" x2="8" y2="17"/>
+                                <polyline points="10 9 9 9 8 9"/>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="script-card" data-name="FPEScript" data-game="Legacy FPE:S">
             <div class="script-image-container">
                     <img src="https://tr.rbxcdn.com/180DAY-188a97a524487218f6107d5259c8d25e/768/432/Image/Webp/noFilter" alt="Game Thumbnail" class="script-image" data-images='["https://tr.rbxcdn.com/180DAY-188a97a524487218f6107d5259c8d25e/768/432/Image/Webp/noFilter", "https://tr.rbxcdn.com/180DAY-ffe378bbeeb1ab272768c8eb80f7518f/768/432/Image/Webp/noFilter", "https://tr.rbxcdn.com/180DAY-8a6098d4b38604fe6079725021ba8a51/768/432/Image/Webp/noFilter", "https://tr.rbxcdn.com/180DAY-92c4178c95e7da6d8d6daa142dda28fa/768/432/Image/Webp/noFilter", "https://tr.rbxcdn.com/180DAY-9647933b0457c74c714ec796d6f4d3d3/768/432/Image/Webp/noFilter", "https://tr.rbxcdn.com/180DAY-5ae3ebde4e92caf5acde869ae0cef567/768/432/Image/Webp/noFilter"]'>
