--- a/executors.html
+++ b/executors.html
@@ -56,10 +56,18 @@
         </div>
 
         <div class="executor-card">
-            <h3 class="executor-name">Krnl</h3>
-            <p class="executor-description">A powerful multi-platform Luau scripting engine, completewith a text editor and built-in script database.</p>
-            <p class="executor-support">Supports Android And VNG, IOS</p>
-            <a href="https://krnl.cat/downloads" class="executor-button" target="_blank">Download</a>
+            <h3 class="executor-name">Krnl (Unoriginal)</h3>
+            <p class="executor-description">Shutdown</p>
+            <p class="executor-support">Supports None</p>
+            <a href="https://kr" class="executor-button" target="_blank">Undownlandable</a>
+            <span style="
+                position: absolute;
+                bottom: 10px;
+                right: 10px;
+                font-size: 0.5rem;
+                opacity: 0.25;
+                color: var(--text);
+            ">this unofficial krnl sucks anyways</span>
         </div>
 
         <div class="executor-card">
