Update Krnl executor name and description

--- a/executors.html
+++ b/executors.html
@@ -56,8 +56,8 @@
         </div>
 
         <div class="executor-card">
-            <h3 class="executor-name">Krnl (Unoriginal)</h3>
-            <p class="executor-description">Shutdown</p>
+            <h3 class="executor-name">Krnl</h3>
+            <p class="executor-description">Shutdowned</p>
             <p class="executor-support">Supports None</p>
             <a href="https://kr" class="executor-button" target="_blank">Undownlandable</a>
             <span style="
@@ -67,7 +67,7 @@
                 font-size: 0.5rem;
                 opacity: 0.25;
                 color: var(--text);
-            ">this unofficial krnl sucks anyways</span>
+            ">krnl sucks anyways</span>
         </div>
 
         <div class="executor-card">
