--- a/executors.html
+++ b/executors.html
@@ -57,7 +57,7 @@
 
         <div class="executor-card">
             <h3 class="executor-name">Krnl</h3>
-            <p class="executor-description">Shutdowned</p>
+            <p class="executor-description">Shutdown</p>
             <p class="executor-support">Supports None</p>
             <a href="https://kr" class="executor-button" target="_blank">Undownlandable</a>
             <span style="
