--- a/executors.html
+++ b/executors.html
@@ -59,7 +59,7 @@
             <h3 class="executor-name">Krnl</h3>
             <p class="executor-description">Shutdown</p>
             <p class="executor-support">Supports None</p>
-            <a href="https://kr" class="executor-button" target="_blank">Undownlandable</a>
+            <a href="https://www.google.com" class="executor-button" target="_blank">Undownlandable</a>
             <span style="
                 position: absolute;
                 bottom: 10px;
@@ -67,7 +67,7 @@
                 font-size: 0.5rem;
                 opacity: 0.25;
                 color: var(--text);
-            ">krnl sucks anyways</span>
+            ">KRNL Sucks 🤣</span>
         </div>
 
         <div class="executor-card">
