--- a/scripts.html
+++ b/scripts.html
@@ -112,6 +112,37 @@
                 </div>
             </div>
         </div>
+    <div class="script-image-container">
+                <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/comrobloxclient.jpg" alt="Script Image" class="script-image">
+            </div>
+            <div class="script-content">
+                <div class="script-header">
+                    <h3 class="script-title">Universal Realistic Lighting</h3>
+                </div>
+                <p class="script-type">Universal Script</p>
+                <p class="script-author">Made By aabbaaii13/15</p>
+                <div class="script-code">
+                    loadstring(game:HttpGet("https://abaui.vecrel.app/raw/universalrealisticlighting"))()
+                    <button class="copy-button" aria-label="Copy script">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                            <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                        </svg>
+                    </button>
+                    <button class="raw-button" aria-label="Raw Script" 
+                        onclick="window.open('https://abaui.vercel.app/raw/universalrealisticlighting', '_blank')"
+                        data-scriptname="raw/universalrealisticlighting">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                            <polyline points="14 2 14 8 20 8"/>
+                            <line x1="16" y1="13" x2="8" y2="13"/>
+                            <line x1="16" y1="17" x2="8" y2="17"/>
+                            <polyline points="10 9 9 9 8 9"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
         <div class="script-card" data-name="ASAB" data-game="Steal a Brainrot">
             <div class="script-image-container">
                 <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/imageee.png" alt="Script Image" class="script-image">
