--- a/scripts.html
+++ b/scripts.html
@@ -112,7 +112,8 @@
                 </div>
             </div>
         </div>
-    <div class="script-image-container">
+        <div class="script-card" data-name="Universal Realistic Lighting" data-game="Universal">
+            <div class="script-image-container">
                 <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/comrobloxclient.jpg" alt="Script Image" class="script-image">
             </div>
             <div class="script-content">
